[package]
name = "projet_tb_jm_prog_sure_efficace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"  # Pour la génération de nombres aléatoires
crossterm = "0.27.0"
termion = "1.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"